Fixed the background alignment

--- a/app/common/MirandaWebHero/style.module.scss
+++ b/app/common/MirandaWebHero/style.module.scss
@@ -1,22 +1,31 @@
 @use "../../styles/variables" as *;
 
-.heroContainer {
-  position: relative;
+.wrapper {
+  display: flex;
+  justify-content: center;
   width: 100%;
-  height: 70vh;
-  overflow: hidden;
+  background-color: #06030a;
+  .heroContainer {
+    position: relative;
+    width: 100%;
+    max-width: 1800px;
+    height: 70vh;
+    overflow: hidden;
+    background-color: #06030a;
 
-  .bgElement {
-    position: absolute;
+    .bgElement {
+      position: absolute;
 
-    &.folliage2 {
-      max-width: 2000px;
-      object-fit: cover;
-      background-color: blue;
-      transform: scale(1.2);
+      &.folliage2 {
+        object-fit: cover;
+        background-color: blue;
+        transform: scale(1.2);
 
-      @media (max-width: 768px) {
-        transform: scale(1.7, 1.2);
+        // Mobile
+        @media (max-width: 768px) {
+          transform: scale(1.7, 1.2);
+          width: 100%;
+        }
       }
     }
   }
